# milo

./: .gitignore  CMakeLists.txt  LICENSE.txt  Pipfile  README.md
app/: CMakeLists.txt  main.cpp
app/include/milo/app/: app.h  dep.h  parameter.h  pattern.h  run.h  type.h
app/include/milo/app/command/: benchmark.h  version.h
apps/codegen/: main.py
cli/: CMakeLists.txt  main.cpp
cli/include/milocli/: app.h  dep.h  error.h  parameter.h  pattern.h  run.h  type.h
cmake/: config.h
doc/: algorithms.md  benchmarking.md  integration.md  reference.md  reference_codec.md  reference_kdf.md  reference_mac.md  roadmap.md
docs/: algorithms.md  benchmarking.md  integration.md  reference.md  reference_aead.md  reference_cipher.md  reference_codec.md  reference_hash.md  reference_kdf.md  reference_mac.md
include/milo/: arch.h  benchmark.h  bits.h  common.h  compiler.h  concepts.h  container.h  def.h  endian.h  error.h  impl.h  inner.h  internal.h  literal.h  literals.h  memory.h  meta.h  option.h  options.h  traits.h  update.h  utility.h  version.h
include/milo/aead/: apie.h  chacha.h  chacha_20_poly_1305.h  test.h
include/milo/cipher/: apie.h  chacha.h  chacha_20.h  test.h
include/milo/codec/: apie.h  base.h  base_64.h  hex.h  test.h
include/milo/concepts/: aead.h  basic.h  block.h  cipher.h  codec.h  hash.h  kdf.h  mac.h  option.h  prf.h
include/milo/detail/: arch.h  bit.h  compiler.h  endian.h  impl.h  memory.h  option.h  update.h
include/milo/hash/: apie.h  sha.h  test.h
src/milo/: error.h  internal.h  meta.h  option.h
test/: CMakeLists.txt
test/inner/: CMakeLists.txt
test/internal/: CMakeLists.txt  memory_load.cpp  memory_stor.cpp
test/primitive/: CMakeLists.txt  aead_chacha_20_poly_1305_decrypt.cpp  aead_chacha_20_poly_1305_encrypt.cpp  cipher_chacha_20_decrypt.cpp  cipher_chacha_20_encrypt.cpp  codec_base_16_decode.cpp  codec_base_16_encode.cpp  codec_base_64_decode.cpp  codec_base_64_encode.cpp  hash_sha_1_160.cpp  hash_sha_2_224.cpp  hash_sha_2_256.cpp  hash_sha_2_384.cpp  hash_sha_2_512.cpp  hash_sha_2_512_224.cpp  hash_sha_2_512_256.cpp  kdf_hkdf_hmac_sha_1_160.cpp  kdf_hkdf_hmac_sha_2_224.cpp  kdf_hkdf_hmac_sha_2_256.cpp  kdf_hkdf_hmac_sha_2_384.cpp  kdf_hkdf_hmac_sha_2_512.cpp  kdf_hkdf_hmac_sha_2_512_224.cpp  kdf_hkdf_hmac_sha_2_512_256.cpp  kdf_pbkdf_2_hmac_sha_1_160.cpp  kdf_pbkdf_2_hmac_sha_2_224.cpp  kdf_pbkdf_2_hmac_sha_2_256.cpp  kdf_pbkdf_2_hmac_sha_2_384.cpp  kdf_pbkdf_2_hmac_sha_2_512.cpp  kdf_pbkdf_2_hmac_sha_2_512_224.cpp  kdf_pbkdf_2_hmac_sha_2_512_256.cpp  mac_hmac_sha_1_160.cpp  mac_hmac_sha_2_224.cpp  mac_hmac_sha_2_256.cpp  mac_hmac_sha_2_384.cpp  mac_hmac_sha_2_512.cpp  mac_hmac_sha_2_512_224.cpp  mac_hmac_sha_2_512_256.cpp  mac_poly_1305.cpp
test/primitive/config/: aead_chacha_20_poly_1305_decrypt.json  aead_chacha_20_poly_1305_encrypt.json  cipher_chacha_20_decrypt.json  cipher_chacha_20_encrypt.json  codec_base_16_decode.json  codec_base_16_encode.json  codec_base_64_decode.json  codec_base_64_encode.json  generate.sh  hash_sha_1_160.json  hash_sha_2_224.json  hash_sha_2_256.json  hash_sha_2_384.json  hash_sha_2_512.json  hash_sha_2_512_224.json  hash_sha_2_512_256.json  kdf_hkdf_hmac_sha_1_160.json  kdf_hkdf_hmac_sha_2_224.json  kdf_hkdf_hmac_sha_2_256.json  kdf_hkdf_hmac_sha_2_384.json  kdf_hkdf_hmac_sha_2_512.json  kdf_hkdf_hmac_sha_2_512_224.json  kdf_hkdf_hmac_sha_2_512_256.json  kdf_pbkdf_2_hmac_sha_1_160.json  kdf_pbkdf_2_hmac_sha_2_224.json  kdf_pbkdf_2_hmac_sha_2_256.json  kdf_pbkdf_2_hmac_sha_2_384.json  kdf_pbkdf_2_hmac_sha_2_512.json  kdf_pbkdf_2_hmac_sha_2_512_224.json  kdf_pbkdf_2_hmac_sha_2_512_256.json  mac_hmac_sha_1_160.json  mac_hmac_sha_2_224.json  mac_hmac_sha_2_256.json  mac_hmac_sha_2_384.json  mac_hmac_sha_2_512.json  mac_hmac_sha_2_512_224.json  mac_hmac_sha_2_512_256.json  mac_poly_1305.json
tests/: CMakeLists.txt  aead_chacha_20_poly_1305_decrypt.cpp  aead_chacha_20_poly_1305_encrypt.cpp  cipher_chacha_20_decrypt.cpp  cipher_chacha_20_encrypt.cpp  codec_base_16_decode.cpp  codec_base_16_encode.cpp  codec_base_64_decode.cpp  codec_base_64_encode.cpp  codec_hex_decode.cpp  codec_hex_encode.cpp  hash_sha_1_160.cpp  hash_sha_2_224.cpp  hash_sha_2_256.cpp  hash_sha_2_384.cpp  hash_sha_2_512.cpp  hash_sha_2_512_224.cpp  hash_sha_2_512_256.cpp  kdf_hkdf_hmac_sha_1_160.cpp  kdf_hkdf_hmac_sha_2_224.cpp  kdf_hkdf_hmac_sha_2_256.cpp  kdf_hkdf_hmac_sha_2_384.cpp  kdf_hkdf_hmac_sha_2_512.cpp  kdf_hkdf_hmac_sha_2_512_224.cpp  kdf_hkdf_hmac_sha_2_512_256.cpp  kdf_pbkdf_2_hmac_sha_1_160.cpp  kdf_pbkdf_2_hmac_sha_2_224.cpp  kdf_pbkdf_2_hmac_sha_2_256.cpp  kdf_pbkdf_2_hmac_sha_2_384.cpp  kdf_pbkdf_2_hmac_sha_2_512.cpp  kdf_pbkdf_2_hmac_sha_2_512_224.cpp  kdf_pbkdf_2_hmac_sha_2_512_256.cpp  mac_hmac_sha_1_160.cpp  mac_hmac_sha_2_224.cpp  mac_hmac_sha_2_256.cpp  mac_hmac_sha_2_384.cpp  mac_hmac_sha_2_512.cpp  mac_hmac_sha_2_512_224.cpp  mac_hmac_sha_2_512_256.cpp  mac_poly_1305.cpp  (+2 more)
tests/configs/: aead_chacha_20_poly_1305_decrypt.json  aead_chacha_20_poly_1305_encrypt.json  cipher_chacha_20_decrypt.json  cipher_chacha_20_encrypt.json  codec_base_16_decode.json  codec_base_16_encode.json  codec_base_64_decode.json  codec_base_64_encode.json  codec_hex_decode.json  codec_hex_encode.json  hash_sha_1_160.json  hash_sha_2_224.json  hash_sha_2_256.json  hash_sha_2_384.json  hash_sha_2_512.json  hash_sha_2_512_224.json  hash_sha_2_512_256.json  kdf_hkdf_hmac_sha_1_160.json  kdf_hkdf_hmac_sha_2_224.json  kdf_hkdf_hmac_sha_2_256.json  kdf_hkdf_hmac_sha_2_384.json  kdf_hkdf_hmac_sha_2_512.json  kdf_hkdf_hmac_sha_2_512_224.json  kdf_hkdf_hmac_sha_2_512_256.json  kdf_pbkdf_2_hmac_sha_1_160.json  kdf_pbkdf_2_hmac_sha_2_224.json  kdf_pbkdf_2_hmac_sha_2_256.json  kdf_pbkdf_2_hmac_sha_2_384.json  kdf_pbkdf_2_hmac_sha_2_512.json  kdf_pbkdf_2_hmac_sha_2_512_224.json  kdf_pbkdf_2_hmac_sha_2_512_256.json  mac_hmac_sha_1_160.json  mac_hmac_sha_2_224.json  mac_hmac_sha_2_256.json  mac_hmac_sha_2_384.json  mac_hmac_sha_2_512.json  mac_hmac_sha_2_512_224.json  mac_hmac_sha_2_512_256.json  mac_poly_1305.json
tool/codegen/: setup.py
(+262 files in other folders)
